--- a/src/main/webapp/WEB-INF/views/authenticate/login.html
+++ b/src/main/webapp/WEB-INF/views/authenticate/login.html
@@ -66,8 +66,8 @@
         </button>
 
         <button class="bg-white border border-black text-black text-sm py-2 px-6 w-full flex items-center justify-center gap-2 rounded mb-6"
-                th:onclick="'window.location.href=\'/login-otp\''" type="button">
-            Đăng nhập bằng OTP
+                th:onclick="'window.location.href=\'/authenticate/otp\''" type="button">
+        Đăng nhập bằng OTP
             <i class="fas fa-mobile-alt"></i>
         </button>
         <div class="text-center text-sm">
