--- a/src/main/webapp/WEB-INF/views/authenticate/register.html
+++ b/src/main/webapp/WEB-INF/views/authenticate/register.html
@@ -49,7 +49,7 @@
         </div>
         <p th:text="${error}" class="text-red-600 mb-3"></p>
         <div class="relative mb-4">
-            <input type="email" placeholder="Địa chỉ email"
+            <input type="email" placeholder="Địa chỉ email" required
                    class="border border-black outline-none text-sm py-1 px-3 w-full pr-8 rounded"
                    th:field="*{email}"/>
             <i class="fas fa-envelope absolute right-2 top-1/2 -translate-y-1/2 text-black text-xs"
