--- a/src/main/webapp/WEB-INF/views/admin/fragments/sidebar.html
+++ b/src/main/webapp/WEB-INF/views/admin/fragments/sidebar.html
@@ -15,7 +15,7 @@
     <a class="sidebar-link" href="#" title="Hồ sơ bệnh án">
       <i class="fas fa-file-medical-alt sidebar-icon text-green-600"></i> Hồ sơ bệnh án
     </a>
-    <a class="sidebar-link" href="#" title="Quản lý nhân viên">
+    <a class="sidebar-link" href="/manageAccount/testUser/3" title="Quản lý nhân viên">
       <i class="fas fa-users-cog sidebar-icon text-purple-600"></i> Quản lý nhân viên
     </a>
     <a class="sidebar-link" href="#" title="Quản lý bác sĩ">
