--- a/src/main/webapp/WEB-INF/views/admin/fragments/header.html
+++ b/src/main/webapp/WEB-INF/views/admin/fragments/header.html
@@ -15,7 +15,7 @@
         >
             <i class="fas fa-bars"></i>
         </button>
-        <h2 class="text-xl font-bold text-black hidden md:block">Quản lý hệ thống</h2>
+        <a th:href="@{api/otp/home}" class="text-xl font-bold text-black hidden md:block">Quản lý hệ thống</a>
         <nav class="flex items-center space-x-6 relative flex-nowrap">
             <!-- Notifications -->
             <div class="relative dropdown">
