--- a/src/main/webapp/WEB-INF/views/authenticate/login.html
+++ b/src/main/webapp/WEB-INF/views/authenticate/login.html
@@ -123,7 +123,7 @@
     });
     let message = [[${messageLogin}]];
     if (message) {
-        showSuccess(message);
+        window.showSuccess(message);
     }
 
     loginForm.addEventListener('submit', (e) => {
