--- a/src/main/webapp/WEB-INF/views/authenticate/otp.html
+++ b/src/main/webapp/WEB-INF/views/authenticate/otp.html
@@ -128,7 +128,7 @@
             return;
         }
 
-        fetch('/api/otp/send', {
+        fetch('/emailMessage/send', {
             method: 'POST',
             headers: { 'Content-Type': 'application/x-www-form-urlencoded; charset=UTF-8' },
             body: new URLSearchParams({ email: email })
@@ -160,7 +160,7 @@
             return;
         }
 
-        fetch('/api/otp/send', {
+        fetch('/emailMessage/send', {
             method: 'POST',
             headers: { 'Content-Type': 'application/x-www-form-urlencoded; charset=UTF-8' },
             body: new URLSearchParams({ email: email })
@@ -191,14 +191,14 @@
             return;
         }
 
-        fetch('/api/otp/verify', {
+        fetch('/emailMessage/verify', {
             method: 'POST',
             headers: { 'Content-Type': 'application/x-www-form-urlencoded; charset=UTF-8' },
             body: new URLSearchParams({ email: email, code: otp })
         }).then(res => {
             if (res.ok) {
                 window.showSuccess('Xác thực thành công!').then(() => {
-                    window.location.href = '/api/otp/home';
+                    window.location.href = '/emailMessage/home';
                 });
             } else {
                 res.text().then(text => {
